--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="pixelArt.js" charset="utf-8" defer></script>
   </head>
+  <h1>Pixel Art Maker</h1>
   <body>
   </body>
 </html>
